testcases/compiler2015/Phase2/CompileError/lvalue2-5100379071-puyouer.c
/**
 * 0 is not a lvalue
 */

int main() {
    int a, b;
    a = 0 = b;
}
